Fix Modal styles on Firefox

--- a/assets/js/blocks/product-collection/edit/editor.scss
+++ b/assets/js/blocks/product-collection/edit/editor.scss
@@ -66,6 +66,7 @@
 		.wc-blocks-product-collection__collection-button-text {
 			padding: 0 $gap-small;
 			text-align: left;
+			white-space: break-spaces;
 		}
 
 		.wc-blocks-product-collection__collection-button-title {
